--- a/front/src/comp/Banner.css
+++ b/front/src/comp/Banner.css
@@ -2,7 +2,8 @@
 .nav{
    background-color: transparent;
    position: absolute;
-   z-index: 1;
+   z-index: 2;
+   
 }
 .banner-div{
     width: 100vw;
@@ -11,8 +12,26 @@
 .banner-img{
     width: 100%;
     height: 100%;
-    background-color: aqua;
+   
     position: absolute;
+}
+
+.grad{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .4;
+    position: absolute;
+    z-index: 1;
+} 
+.image-banner{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
 }
 .search{
     position: absolute;
@@ -20,12 +39,21 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 .text{
     margin-bottom: 4rem;
 }
+.text h1 {
+   /* font-family: 'Open Sans Condensed', sans-serif; */
+   font-family: 'Merriweather', serif; 
+    opacity: .8;
+    font-size: 3rem;
+    letter-spacing: .6rem;
+    color: white;
+}
 .banner {
-    
+  
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -41,17 +69,19 @@
 }
 .form-sea {
     background-color: white;
-    border: black 2px solid;
+    border: white 2px solid;
     border-radius: 10px;
     padding-right: .5rem;
     padding-top: .5rem;
     padding-bottom: .5rem;
+    opacity: .8;
 }
 i{
     padding-right: 1rem;
     padding-left: 1rem;
 }
 .form-sea input {
+  
     width: 50vw;
    background-color: transparent;
    border: hidden;
