--- a/front/src/comp/newLiat.css
+++ b/front/src/comp/newLiat.css
@@ -9,9 +9,11 @@
 }
 .address-zip{
     width: 100%;
-    
+    background-color: rgb(201, 201, 201);
+    justify-content: center;
+    align-items: center;
     display: flex;
-    
+    height: 50%;
 }
 .stateS h1, .cityC h1{
     font-size: 1rem;
@@ -77,7 +79,8 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    width: 100%;
+    height: 30%;
 }
 .home-det{
     justify-content: center;
@@ -85,7 +88,7 @@
     display: flex;
     
     width: 100%;
-    height: 30%;
+    height: 50%;
 }
 a .prop-link{
     color: #000;
