--- a/front/src/comp/Add.css
+++ b/front/src/comp/Add.css
@@ -2,12 +2,41 @@
     margin: 0;
     padding: 0;
 }
+/*.nav-div{
+    background-color: transparent;
+    position: absolute;
+    z-index: 2;
+    
+ } */
+ .nav-d{
+    background-color: rgb(54, 54, 54);
+}
 .add-list{
   justify-content: center;
   align-items: center;
   display: flex;
+  position: relative;
   flex-direction: column;
-  margin-top: 3rem;
+  padding-top: 5rem; 
+  padding-bottom: 2rem;
+ /* background-color: rgb(54, 54, 54); */
+
+}
+.header-text{
+    width:70%;
+    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.header-text h1 {
+    font-size: 1.8rem;
+    color: rgb(54, 54, 54);
+}
+.underline {
+    background-color: rgb(54, 54, 54);
+    width: 100%;
+    height: 1px;
 }
 .form{
     width: 60vw;
@@ -15,7 +44,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    background-color: aqua;
+
 }
 .add-form {
     width: 100%;
@@ -99,5 +128,17 @@
     background-color:  rgb(15, 15, 15);
     color: white;
 }
-
+/*------------------------------------------------------------*/
+.mess {
+    margin-top: 1rem;
+    background-color: rgb(0, 128, 0, .6);
+    color: rgb(1, 31, 1);
+   width: 60%;
+   justify-content: center;
+    align-items: center;
+    display: flex;
+    
+    font-size: 1rem;
+    font-weight: bolder;
+}
 
