--- a/front/src/comp/Banner.css
+++ b/front/src/comp/Banner.css
@@ -84,9 +84,26 @@ i{
 .form-sea input {
   
     width: 50vw;
-   background-color: transparent;
-   border: hidden;
+    background-color: transparent;
+    border: hidden;
     cursor: pointer;
     outline: none;
     border: none;
+}
+@media screen and (min-width: 0px) and (max-width: 900px) {
+    
+    .text h1 {
+     
+        font-size: 2rem;
+       
+    }
+}
+@media screen and (min-width: 0px) and (max-width: 600px) {
+    
+    .text h1 {
+     
+        font-size: 1rem;
+       
+    }
+   
 }
