--- a/front/src/comp/newLiat.css
+++ b/front/src/comp/newLiat.css
@@ -262,3 +262,14 @@ a .prop-link{
 .bath-title, .bed-title, .sqf-title{
     margin-left: .4rem;
 }
+
+@media screen and (min-width: 0px) and (max-width: 800px) {
+    
+   
+    .sear {
+         font-size: .4rem;
+    }
+    .locat{
+        font-size: .4rem;
+    }
+}
