--- a/front/src/comp/Add.css
+++ b/front/src/comp/Add.css
@@ -142,3 +142,11 @@
     font-weight: bolder;
 }
 
+@media screen and (min-width: 0px) and (max-width:1300px) {
+    .submit{
+        margin-top: 2rem;
+        
+    }
+    
+      
+}
