--- a/front/src/comp/Banner.css
+++ b/front/src/comp/Banner.css
@@ -90,6 +90,18 @@ i{
     outline: none;
     border: none;
 }
+.no-sear{
+    width: 100vw;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: azure;
+}
+.no-sear h1{
+  opacity: .5;
+  font-size: 1rem;
+}
 @media screen and (min-width: 0px) and (max-width: 900px) {
     
     .text h1 {
